Fixing issues with the ios7 iPhone panel size. Fixing issue with iPad cutoff header. Mobile header will be cut off until scroll begins where it be revealed when the wp admin bar goes away.

--- a/assets/css/madden.css
+++ b/assets/css/madden.css
@@ -1268,6 +1268,9 @@ bottom: 10px;
     height:1024px;
   }
 
+  .admin-bar #madden header{
+    top:46px;
+  }
 
   #madden #part-1-opener .panel {
     opacity: 1;
@@ -1465,8 +1468,9 @@ bottom: 10px;
   .admin-bar #madden header{
     top:0px;
   }
-  #madden #part-1-opener
-  #madden #part-2-opener{
+  #madden #part-1-opener,
+  #madden #part-2-opener,
+  #madden .panel{
     height:500px;
   }
   #madden #part-1-opener {
